# cv_faithfulness

./: LICENSE  README.md  pyproject.toml  test.ipynb
src/cv_faithfulness/: __init__.py  base.py  faithfulness.py  sampler.py
