[project]
name = "cv_faithfulness"
version = "0.0.1"
authors = [
  { name="Konstantinos Papakostas", email="dinospk1999@gmail.com" },
]
description = "TODO"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[project.urls]
"Homepage" = "https://github.com/din0s/cv_faithfulness"
"Bug Tracker" = "https://github.com/din0s/cv_faithfulness/issues"
